// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md correctly 1`] = `
<div
  class="ant-spin ant-spin-spinning"
>
  <span
    class="ant-spin-dot ant-spin-dot-spin"
  >
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
    <i
      class="ant-spin-dot-item"
    />
  </span>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md correctly 1`] = `
<div
  class="ant-spin ant-spin-spinning"
>
  <span
    aria-label="loading"
    class="anticon anticon-loading ant-spin-dot"
    role="img"
    style="font-size:24px"
  >
    <svg
      aria-hidden="true"
      class="anticon-spin"
      data-icon="loading"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
      />
    </svg>
  </span>
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
        data-show="true"
        role="alert"
      >
        <span
          class="ant-alert-message"
        >
          Alert message title
        </span>
        <span
          class="ant-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <button
      aria-checked="false"
      class="ant-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/inside.md correctly 1`] = `
<div
  class="example"
>
  <div
    class="ant-spin ant-spin-spinning"
  >
    <span
      class="ant-spin-dot ant-spin-dot-spin"
    >
      <i
        class="ant-spin-dot-item"
      />
      <i
        class="ant-spin-dot-item"
      />
      <i
        class="ant-spin-dot-item"
      />
      <i
        class="ant-spin-dot-item"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md correctly 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
        data-show="true"
        role="alert"
      >
        <span
          class="ant-alert-message"
        >
          Alert message title
        </span>
        <span
          class="ant-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <button
      aria-checked="false"
      class="ant-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/size.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:16px"
  >
    <div
      class="ant-spin ant-spin-sm ant-spin-spinning"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-right:16px"
  >
    <div
      class="ant-spin ant-spin-spinning"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-spin ant-spin-lg ant-spin-spinning"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md correctly 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning ant-spin-show-text"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
      <div
        class="ant-spin-text"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <span
        class="ant-alert-message"
      >
        Alert message title
      </span>
      <span
        class="ant-alert-description"
      >
        Further details about the context of this alert.
      </span>
    </div>
  </div>
</div>
`;
